TestRepo2/src/objects/Blitz__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Blitzes</relationshipLabel>
        <relationshipName>Blitzes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Blitz_Brand__c</fullName>
        <label>Blitz Brand</label>
        <picklist>
            <picklistValues>
                <fullName>Blackhaus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Goldschlager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rumple Minze</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Johnnie Walker Blue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Crown Royal Reserve</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Don Julio 1942</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bushmills Honey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Crown Black</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Crown Maple</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Don Julio Blanco</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Don Julio Reposado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Don Julio Anejo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Don Julio Real</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Blitz_Details__c</fullName>
        <defaultValue>&quot;1. Select Program&quot; &amp; BR() &amp; &quot;2. Select Brand&quot; &amp; BR() &amp; &quot;3. Enter the Amount as Follows:&quot; &amp; BR() &amp; BR() &amp; &quot;     a.) New Distribution - enter 1 in the amount field&quot; &amp; BR() &amp;
&quot;     b.) Menu - enter 1 in the amount field&quot; &amp; BR() &amp;
&quot;     c.) Feature - enter 1 in the amount field&quot; &amp; BR() &amp; BR() &amp;&quot;4. Click Save &amp; New to add another Brand&quot; &amp; BR() &amp; &quot;5. Click Save when done&quot;</defaultValue>
        <label>Blitz Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Blitz_Program__c</fullName>
        <label>Blitz Program</label>
        <picklist>
            <picklistValues>
                <fullName>All for One, One for Me - Additional Bottle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>All for One, One for Me - Feature</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>All for One, One for Me - New Distribution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blitz Week December 3rd</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shot Heard Around the World</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cinco De Mayo-New Distribution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cinco De Mayo-Feature Cards</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cinco De Mayo-Menu</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Date_FInished__c</fullName>
        <defaultValue>Today ()</defaultValue>
        <label>Date FInished</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PDF_Link__c</fullName>
        <defaultValue>&quot;Not Available&quot;</defaultValue>
        <label>PDF Link</label>
        <type>Url</type>
    </fields>
    <label>Blitz</label>
    <nameField>
        <displayFormat>BL-{0000}</displayFormat>
        <label>Blitz Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Blitzes</pluralLabel>
    <recordTypes>
        <fullName>Active_Blitz</fullName>
        <active>true</active>
        <label>Active Blitz</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>